@@ -116,6 +116,8 @@ PHP                                                                        NEWS
 - Fixed bug #43666 (Fixed code to use ODBC 3.52 datatypes for 64bit systems). 
   (Patrick)
 - Fixed bug #43540 (rfc1867 handler newlength problem). (Arnaud)
+- Fixed bug #43053 (Regression: some numbers shown in scientific notation).
+  (int-e at gmx dot de)
 - Fixed bug #42737 (preg_split('//u') triggers a E_NOTICE with newlines).
   (Nuno)
 - Fixed bug #42604 ("make test" fails with --with-config-file-scan-dir=path).
